--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<html>
+<head>
+  <link rel="icon"
+      type="image/png"
+      href="icon.png">
+  <title>The experiment</title>
+</head>
 <audio controls autoplay>
   <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
     <audio controls autoplay>
