--- a/index.html
+++ b/index.html
@@ -1,125 +1,10 @@
-<audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-    <audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio></audio> <!-- where are you at? -->
+<!DOCTYPE html>
+<head>
+</head>
+<body>
+	<h1>When you fix the segfault</h1>
+	<img src="420/willsmith/willy.gif"/ style=""><br/>
+	<audio controls autoplay>
+	  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
+	</audio>
+</audio>
