--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<link rel="stylesheet" type="text/css" href="CSSwag/swag.css">
 </head>
 <body>
 	<h1>When you fix the segfault</h1>
