--- a/index.html
+++ b/index.html
@@ -1,136 +1,20 @@
-<<<<<<< HEAD
+/// CSS from PoodleCorp (poodlecorp.org)
 <html>
 <head>
   <link rel="icon"
       type="image/png"
       href="icon.png">
+	<style>.btn-default{color:#00ff2b;background-color:#000;border-color:#00ff2b;border-radius:0px;}.navbar-inverse{background-color:#000;border-color:#00ff2b;}.btn-default.active,.btn-default:active,.open>.dropdown-toggle.btn-default{color:#fff;background-color:#212121;border-color:#00ff2b;}.btn-default:hover{color:#fff;background-color:#000000;border-color:#00ff2b;}.btn-default.focus,.btn-default:focus{color:#fff;background-color:#000000;border-color:#00ff2b;}.btn-default.active.focus,.btn-default.active:focus,.btn-default.active:hover,.btn-default:active.focus,.btn-default:active:focus,.btn-default:active:hover,.open>.dropdown-toggle.btn-default.focus,.open>.dropdown-toggle.btn-default:focus,.open>.dropdown-toggle.btn-default:hover{color:#fff;background-color:#000000;border-color:#00ff2b;}body{background:url(https://i.imgur.com/dU18gto.gif) no-repeat center center fixed;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;background-color:black;}.well{background-color:#000000;border:1px solid #00ff2b;border-radius:0px;color:white;}</style>
   <title>The experiment</title>
 </head>
-<audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-    <audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio><audio controls autoplay>
-  <source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio></audio> <!-- where are you at? -->
+<body>
+<nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
+<div class="container">
+<div class="navbar-header">
+<a class="navbar-brand" href="http://icechen1.github.io/the_experiment">
+<span style=" text-shadow: 0px 0px 0.2em #00ff2b, 0px 0px 0.2em #00ff2b, 0px 0px 0.2em #00ff2b;font-weight:bold;color:black;text-transform: uppercase;letter-spacing: 10px;">The Experiment</span>
+</a>
+</div>
 =======
 <!DOCTYPE html>
 <head>
