--- a/index.html
+++ b/index.html
@@ -1,37 +1,101 @@
 /// CSS from old PoodleCorp website (poodlecorp.org [archived July 2016])
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <link rel="icon"
-      type="image/png"
-      href="icon.png">
-  <style>.box{width:110px;height:160px;border:1px solid black;}.box2{width:310px;height:160px;border:1px solid black;}#leftsnoop{position:absolute;visibility:visible;left:10px;top:50px;z-index:200;}#rightsnoop{position:absolute;visibility:visible;right:10px;top:50px;z-index:200;}</style>	
-  <title>The experiment</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+  	
+  	<title>The experiment</title>
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  	<link rel="icon" type="image/png" href="icon.png">
+  	<style>.box{width:110px;height:160px;border:1px solid black;}.box2{width:310px;height:160px;border:1px solid black;}#leftsnoop{position:absolute;visibility:visible;left:10px;top:50px;z-index:200;}#rightsnoop{position:absolute;visibility:visible;right:10px;top:50px;z-index:200;}</style>	
 </head>
 <body>
-<div class="box">
-<u>WE ARE IN NEED OF FRESH MEMES!</u>
-<br>
-<img src="https://camo.githubusercontent.com/203817ea430e2c241e10032441029727cf2be475/687474703a2f2f69322e6b796d2d63646e2e636f6d2f70686f746f732f696d616765732f6e657773666565642f3030312f3030322f3031302f3632652e676966">
-<br>
-If you want to contribute, fork this project which can be found <a href="https://github.com/icechen1/the_experiment">here</a> and make a pull request. 
-</div>
 
-<div class="box2">
-<h1>When you fix the segfault</h1>
-<img src="420/willsmith/willy.gif"><br/>
-<audio controls autoplay>
-<source src="/dank/wombo-combo.mp3" type="audio/mpeg">
-</audio>
-<p>Made with love.</p>
-</div>
-	
-<div id="leftsnoop">
-<img src="snoop.gif" alt="snoopy">
-</div>
+	    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">The experiment</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="dank.html">Dank memes </a>
+                    </li>
+                    <li>
+                        <a href="random.hmtl">Random</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-<div id="rightsnoop">
-<img src="snoop.gif" alt="snoopy">
-</div>
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-lg-12">
+                <h1 class="page-header">WE ARE IN NEED OF FRESH MEMES!</h1>
+            </div>
+        </div>
+
+        <div class="row">
+     		<div class="col-lg-6">
+			<img src="https://camo.githubusercontent.com/203817ea430e2c241e10032441029727cf2be475/687474703a2f2f69322e6b796d2d63646e2e636f6d2f70686f746f732f696d616765732f6e657773666565642f3030312f3030322f3031302f3632652e676966" class="image-responsive" width="350px">
+     		</div>
+      		<div class="col-lg-6">
+      			<div class="text-center">
+      				<h2>If you want to contribute, fork this project which can be found <a href="https://github.com/icechen1/the_experiment">here</a> and make a pull request. </h2>
+      			</div>
+     		</div>    		
+        </div>
+
+        <div class="row">
+     		<div class="col-lg-4">
+			<img src="snoop.gif" class="image-responsive">
+     		</div>
+      		<div class="col-lg-4">
+      			<div class="text-center">
+      				<h1>When you fix the segfault</h1>
+					<img src="420/willsmith/willy.gif" class="image-responsive" ><br/>
+						<audio controls autoplay>
+						<source src="/dank/wombo-combo.mp3" type="audio/mpeg">
+						</audio>
+      			</div>
+     		</div> 
+      		<div class="col-lg-4">
+      			<div class="text-center">
+					<img src="snoop.gif" class="image-responsive">
+      			</div>
+     		</div>     		
+        </div>		
+        <div class="row text-center">
+            <div class="col-lg-12">
+				<p>Made with love.</p>
+            </div>
+        </div>
+
+	<div> <!-- /container -->
 </body>
 </html>
 
