Improve index.html
Created it fully responsive by added meta charset, metaname and etc.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 /// CSS from old PoodleCorp website (poodlecorp.org [archived July 2016])
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon"
       type="image/png"
       href="icon.png">
